--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -29,9 +29,9 @@
       <div class="row margin-top-50">
         <div class="col-md-2">
           <aside class="filters">
-            <div class="panel panel-default">
-              <div class="panel-heading">Filter Search</div>
-              <div class="panel-body">
+            <div class="panels panels-default">
+              <div class="panels-heading">Filter Search</div>
+              <div class="panels-body">
                 <form>
                   <div class="form-group">
                     <ul class="list-group" id="filters">
