--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -38,12 +38,12 @@ body>
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
                         <label for="date">Enter a Date</label>
-                        <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
-                        <input class="form-control" id="city" type="text" placeholder="houston">
-                        <input class="form-control" id="state" type="text" placeholder="tx">
+                        <input class="form-control" id="datetime" type="text" placeholder="mm/dd/yyyy">
+                        <input class="form-control" id="city" type="text" placeholder="city">
+                        <input class="form-control" id="state" type="text" placeholder="state">
                         <input class="form-control" id="country" type="text" placeholder="us">
-                        <input class="form-control" id="shape" type="text" placeholder="sphere">
-                        <input class="form-control" id="duration" type="text" placeholder="3 minutes">
+                        <input class="form-control" id="shape" type="text" placeholder="shape">
+                        <input class="form-control" id="duration" type="text" placeholder="time in minutes">
                       </li>
                     </ul>
                   </div>
